[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Piano/SheetView.gd" type="Script" id=2]
[ext_resource path="res://Sprites/note.PNG" type="Texture" id=3]

[node name="Sheet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.66968
margin_bottom = 2.66968
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 388.251, 462.769 )
scale = Vector2( 1.00879, 1.00879 )
texture = ExtResource( 1 )

[node name="Highlight" type="Sprite" parent="."]
position = Vector2( 761.485, 577.712 )
scale = Vector2( 0.067178, 0.067178 )
texture = ExtResource( 3 )

[node name="posA3" type="Position2D" parent="."]
position = Vector2( 691.104, 577.931 )

[node name="posB3" type="Position2D" parent="."]
position = Vector2( 691.05, 561.985 )

[node name="posC4" type="Position2D" parent="."]
position = Vector2( 690.786, 545.859 )

[node name="posD4" type="Position2D" parent="."]
position = Vector2( 690.766, 529.553 )

[node name="posE4" type="Position2D" parent="."]
position = Vector2( 690.979, 520.695 )

[node name="posF4" type="Position2D" parent="."]
position = Vector2( 690.693, 505.081 )

[node name="posG4" type="Position2D" parent="."]
position = Vector2( 690.693, 486.351 )

[node name="posA4" type="Position2D" parent="."]
position = Vector2( 690.577, 470.292 )

[node name="posB4" type="Position2D" parent="."]
position = Vector2( 690.952, 452.313 )

[node name="posC5" type="Position2D" parent="."]
position = Vector2( 690.952, 433.209 )

[node name="posD5" type="Position2D" parent="."]
position = Vector2( 690.952, 416.353 )

[node name="posE5" type="Position2D" parent="."]
position = Vector2( 690.952, 397.999 )

[node name="posF5" type="Position2D" parent="."]
position = Vector2( 691.313, 381.77 )

[node name="posG5" type="Position2D" parent="."]
position = Vector2( 691.635, 371.876 )

[node name="posA5" type="Position2D" parent="."]
position = Vector2( 691.514, 359.427 )

[node name="posB5" type="Position2D" parent="."]
position = Vector2( 691.514, 345.269 )
